--- a/roles/ecp/templates/events/events-controller.yaml.j2
+++ b/roles/ecp/templates/events/events-controller.yaml.j2
@@ -22,32 +22,17 @@ spec:
           path: /opt/prometheus_config
       containers:
       - name: firmament-events
-        image: ading1977/events:20170626
+        image: {{ registry_domain }}/{{ registry_user }}/{{ events_image }}
         imagePullPolicy: Always
         env:
            - name: ELASTICSEARCH_HOST
              value: elasticsearch-logging
            - name: CEILOMETER_API_HOST
              value: ceilometer-api
-           - name: EMAIL_HOST
-             valueFrom:
-               configMapKeyRef:
-                 name: config
-                 key: email-host
-           - name: EMAIL_SENDER
-             valueFrom:
-               configMapKeyRef:
-                 name: config
-                 key: email-sender
-           - name: EMAIL_PASS
-             valueFrom:
-               configMapKeyRef:
-                 name: config
-                 key: email-password
            - name: KUBERNETES_URL
              valueFrom:
                configMapKeyRef:
-                 name: config
+                 name: ecp-config
                  key: kubernetes.url           
         ports:
         - containerPort: 8080
