Add a few more services

--- a/roles/ecp/templates/canes/fluentd-ds.yaml.j2
+++ b/roles/ecp/templates/canes/fluentd-ds.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: fluentd-daemonset
-  namespace: sky-firmament
+  namespace: {{ ecp_namespace }}
 spec:
   template:
     metadata:
