--- a/roles/ecp/templates/canes/canes-controller.yaml.j2
+++ b/roles/ecp/templates/canes/canes-controller.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ReplicationController
 metadata:
   name: firmament-canes
-  namespace: sky-firmament
+  namespace: {{ ecp_namespace }}
   labels:
     app: firmament-canes
     version: v0.3
