--- a/roles/ecp/templates/canes/canes-service.yaml.j2
+++ b/roles/ecp/templates/canes/canes-service.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: canes-firmament-com
-  namespace: sky-firmament
+  namespace: {{ ecp_namespace }}
   labels:
     app: firmament-canes
 spec:
