--- a/roles/ecp/templates/canes/es-service-internal-svc.yaml.j2
+++ b/roles/ecp/templates/canes/es-service-internal-svc.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: elasticsearch-logging
-  namespace: sky-firmament
+  namespace: {{ ecp_namespace }}
   labels:
     app: elasticsearch-logging
 spec:
@@ -18,7 +18,7 @@ apiVersion: v1
 kind: ReplicationController
 metadata:
   name: elasticsearch-logging-v1
-  namespace: sky-firmament
+  namespace: {{ ecp_namespace }}
   labels:
     app: elasticsearch-logging
 spec:
