--- a/roles/ecp/templates/events/events-service.yaml.j2
+++ b/roles/ecp/templates/events/events-service.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: events-firmament-com
-  namespace: sky-firmament
+  namespace: {{ ecp_namespace }}
   labels:
     app: firmament-events
 spec:
