--- a/roles/ecp/templates/license/license-service.yaml.j2
+++ b/roles/ecp/templates/license/license-service.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: license-firmament-com
-  namespace: sky-firmament
+  namespace: {{ ecp_namespace }}
   labels:
     app: firmament-license
 spec:
