--- a/roles/ecp/templates/lyra/lyra-controller.yaml.j2
+++ b/roles/ecp/templates/lyra/lyra-controller.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ReplicationController
 metadata:
   name: firmament-lyra
-  namespace: sky-firmament
+  namespace: {{ ecp_namespace }}
   labels:
     app: firmament-lyra
     version: v0.3
