--- a/roles/ecp/templates/lyra/lyra-service.yaml.j2
+++ b/roles/ecp/templates/lyra/lyra-service.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: lyra-firmament-com
-  namespace: sky-firmament
+  namespace: {{ ecp_namespace }}
   labels:
     app: firmament-lyra
 spec:
