--- a/roles/ecp/templates/mysql/mysql-controller.yaml.j2
+++ b/roles/ecp/templates/mysql/mysql-controller.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ReplicationController
 metadata:
   name: firmament-mysql
-  namespace: sky-firmament
+  namespace: {{ ecp_namespace }}
   labels:
     app: firmament-mysql
 spec:
@@ -15,7 +15,7 @@ spec:
         app: firmament-mysql
     spec:
       containers:
-      - image: ading1977/mysql-sky:20170626
+      - image: {{ registry_domain }}/{{ registry_user }}/{{ mysql_image }}
         name: mysql
         env:
           # $ kubectl create secret generic mysql-pass --from-file=password.txt
