Add remaining services

--- a/roles/ecp/templates/lyra/lyra-controller.yaml.j2
+++ b/roles/ecp/templates/lyra/lyra-controller.yaml.j2
@@ -16,6 +16,7 @@ spec:
         app: firmament-lyra
         version: v0.3
     spec:
+      serviceAccountName: lyra
       containers:
       - name: firmament-lyra
         image: {{ registry_domain }}/{{ registry_user }}/{{ lyra_image }}
