--- a/roles/ecp/templates/river/river-deployment.yaml.j2
+++ b/roles/ecp/templates/river/river-deployment.yaml.j2
@@ -1,21 +1,3 @@
-# exposing river as a service
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    app: river
-    type: api
-  name: river
-  namespace: kube-system
-spec:
-  ports:
-  - name: api
-    port: 8000
-    protocol: TCP
-    targetPort: 8000
-  selector:
-    app: river
-    type: api
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -40,7 +22,7 @@ spec:
     spec:
       containers:
       - name: river
-        image: ading1977/river:20170626
+        image: {{ river_image }}
         imagePullPolicy: Always
         ports:
         - containerPort: 8000
