--- a/roles/ecp/templates/canes/es-service-internal-svc.yaml.j2
+++ b/roles/ecp/templates/canes/es-service-internal-svc.yaml.j2
@@ -31,7 +31,7 @@ spec:
         app: elasticsearch-logging
     spec:
       containers:
-      - image: {{ registry_domain }}/{{ registry_user }}/{{ elasticsearch_image }}
+      - image: {{ elasticsearch_image }}
         imagePullPolicy: Always
         name: elasticsearch-logging
         env:
