--- a/roles/ecp/templates/canes/fluentd-ds.yaml.j2
+++ b/roles/ecp/templates/canes/fluentd-ds.yaml.j2
@@ -11,7 +11,7 @@ spec:
     spec:      
       containers:
       - name: fluentd-elasticsearch
-        image: {{ registry_domain }}/{{ registry_user }}/{{ fluentd_image }}
+        image: {{ fluentd_image }}
         imagePullPolicy: Always
         resources:
           limits:
