--- a/roles/ecp/templates/license/license-controller.yaml.j2
+++ b/roles/ecp/templates/license/license-controller.yaml.j2
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: firmament-license
-        image: {{ registry_domain }}/{{ registry_user }}/{{ license_image }}
+        image: {{ license_image }}
         imagePullPolicy: Always
         resources:
           limits:
