--- a/roles/cni/templates/calico.yml.j2
+++ b/roles/cni/templates/calico.yml.j2
@@ -77,7 +77,7 @@ spec:
       hostNetwork: true
       containers:
         - name: calico-etcd
-          image: quay.io/coreos/etcd:v3.1.10
+          image: {{ calico_etcd_image }}
           env:
             - name: CALICO_ETCD_IP
               valueFrom:
@@ -154,7 +154,7 @@ spec:
         # container programs network policy and routes on each
         # host.
         - name: calico-node
-          image: quay.io/calico/node:v2.4.1
+          image: {{ calico_node_image }}
           env:
             # The location of the Calico etcd cluster.
             - name: ETCD_ENDPOINTS
@@ -223,7 +223,7 @@ spec:
         # This container installs the Calico CNI binaries
         # and CNI network config file on each node.
         - name: install-cni
-          image: quay.io/calico/cni:v1.10.0
+          image: {{ calico_cni_image }}
           command: ["/install-cni.sh"]
           env:
             # The location of the Calico etcd cluster.
@@ -300,7 +300,7 @@ spec:
       serviceAccountName: calico-policy-controller
       containers:
         - name: calico-policy-controller
-          image: quay.io/calico/kube-policy-controller:v0.7.0
+          image: {{ calico_policy_controller_image }}
           env:
             # The location of the Calico etcd cluster.
             - name: ETCD_ENDPOINTS
