--- a/roles/cni/templates/flannel.yml.j2
+++ b/roles/cni/templates/flannel.yml.j2
@@ -55,7 +55,7 @@ spec:
       serviceAccountName: flannel
       containers:
       - name: kube-flannel
-        image: quay.io/coreos/flannel:v0.7.1-amd64
+        image: {{ flannel_image }}
         command: [
           "/opt/bin/flanneld",
           "--ip-masq",
@@ -79,7 +79,7 @@ spec:
         - name: flannel-cfg
           mountPath: /etc/kube-flannel/
       - name: install-cni
-        image: quay.io/coreos/flannel:v0.7.1-amd64
+        image: {{ flannel_image }}
         command: [ "/bin/sh", "-c", "set -e -x; cp -f /etc/kube-flannel/cni-conf.json /etc/cni/net.d/10-flannel.conf; while true; do sleep 3600; done" ]
         volumeMounts:
         - name: cni
