Update charts URL

--- a/roles/ecp/templates/appstore/repositories.yaml.j2
+++ b/roles/ecp/templates/appstore/repositories.yaml.j2
@@ -4,3 +4,6 @@ repositories:
 - cache: stable-index.yaml
   name: stable
   url: https://kubernetes-charts.storage.googleapis.com
+- cache: local-index.yaml
+  name: local
+  url: "{{ ecp_charts_url }}"
