--- a/roles/ecp/templates/river/river-deployment.yaml.j2
+++ b/roles/ecp/templates/river/river-deployment.yaml.j2
@@ -20,6 +20,7 @@ spec:
         type: api
       name: river
     spec:
+      serviceAccountName: river
       containers:
       - name: river
         image: {{ river_image }}
