Enable privileged mode for lyra to mount glusterfs volumes

--- a/roles/ecp/templates/lyra/lyra-controller.yaml.j2
+++ b/roles/ecp/templates/lyra/lyra-controller.yaml.j2
@@ -21,6 +21,8 @@ spec:
       - name: firmament-lyra
         image: {{ lyra_image }}
         imagePullPolicy: Always
+        securityContext:
+          privileged: true
         env:
            - name: ETCD_URL
              valueFrom:
