Remove 'latest' image tags

--- a/roles/ecp/templates/prometheus/manifests-all.yaml.j2
+++ b/roles/ecp/templates/prometheus/manifests-all.yaml.j2
@@ -131,7 +131,7 @@ spec:
     spec:
       containers:
       - name: grafana-import-dashboards
-        image: {{ docker_image }}
+        image: {{ curl_image }}
         command: ["/bin/sh", "-c"]
         workingDir: /opt/grafana-import-dashboards
         args:
